Fixed unit tests. Migrated to jdk 19 so we can use sejda-io v4.